[package]
name = "bitcask"
version = "0.1.0"
authors = ["Yifan Liu <0219lyf@gmail.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/TODO"
homepage = "https://github.com/TODO"
description = """

"""
readme = "README.md"
categories = ["development-tools"]
keywords = []

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
parking_lot = "0.12.3"
thiserror = "2.0.12"
